--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,3 +1,4 @@
+
 @import "bootstrap";
 
 .clear {
@@ -39,6 +40,8 @@
   color: black;
   font-size: 25px;
   border-bottom: 1px solid #dfdfdf;
+  font-family: 'milkshakeregular', serif;
+  font-weight: bold;
 }
 
 header {
@@ -48,3 +51,14 @@ header {
 hr {
   clear:both;
 }
+
+h1 {
+  font-family: 'milkshakeregular', serif;
+  font-weight: bold;
+  font-size: 48px;
+}
+
+h2 {
+  font-family: 'milkshakeregular', serif;
+}
+
